<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:padding="16dp"
            android:src="?attr/homeAsUpIndicator"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/kabel"
            android:padding="12dp"
            android:shadowColor="#888888"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_color_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#000000"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:shadowColor="#aaaaaa"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/background_color"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textSize="28sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/tv_show_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4sp"
                android:background="@drawable/good_rounded_corners"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:padding="16dp"
                android:shadowColor="#cccccc"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/show_total"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_hide_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4sp"
                android:background="@drawable/bad_rounded_corners"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:padding="16dp"
                android:shadowColor="#cccccc"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/hide_total"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/bt_pause_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#000000"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:shadowColor="#aaaaaa"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/remove_ads"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="#c0c0c0" />

            <RatingBar
                android:id="@+id/rr_ratings"
                android:progressBackgroundTint="#cbcbcb"
                android:progressTint="#fbbc04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/bt_other_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#000000"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:shadowColor="#aaaaaa"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/other_apps"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
