<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="developer.android.vd.diceroller.MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings" />

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/ib_minus"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/ic_minus"
            android:contentDescription="@string/minus" />

        <TextView
            android:id="@+id/tv_no_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:text="@string/one"
            android:textColor="#000000"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/ib_plus"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/ic_plus"
            android:contentDescription="@string/plus" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_dice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_dice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_dice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_dice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_dice5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid" />

                <ImageView
                    android:id="@+id/iv_dice6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_dice7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_dice8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/iv_dice9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:contentDescription="@string/dice"
                    android:src="@drawable/dice_none_solid"
                    android:visibility="invisible" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4sp"
                android:gravity="center"
                android:shadowColor="#cccccc"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#000000"
                android:gravity="center"
                android:fontFamily="@font/aladin"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:shadowColor="#aaaaaa"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/roll"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
